# convert-csv-schwab2pp

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  convert-csv-schwab2pp.ipynb  convert.py  development.md  example.csv  example_out.csv  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  python-app.yml
guide/: README.md
schwab2pp/: __init__.py  cli.py
src/schwab2pp/: __init__.py  cli.py  convert.py
